# Herding-Cats-Rust

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GITHUB_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING_SUMMARY.md  INTELLISENSE_FIXES.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  SUPPORT.md  THEME_RADIUS_IMPLEMENTATION_SUMMARY.md  add_logs.py  binarytargetissues.txt  build.rs  build_error.txt  build_error_ai.txt  build_error_check.txt  build_error_check_10.txt  build_error_check_11.txt  build_error_check_12.txt  build_error_check_13.txt  build_error_check_14.txt  build_error_check_15.txt  build_error_check_16.txt  build_error_check_18.txt  build_error_check_19.txt  build_error_check_20.txt  build_error_check_21.txt  build_error_check_3.txt  build_error_check_4.txt  build_error_check_5.txt  build_error_check_6.txt  build_error_check_7.txt  (+92 more)
.github/workflows/: ci.yml  enhanced-ci.yml
assets/editor/: index.html
docs/: ARCHITECTURE_DIAGRAM.md  ENHANCED_FONT_SYSTEM.md  INDEPENDENT_WRITING_TOOLS_ARCHITECTURE.md  MCP_INTEGRATION.md  THEME_SYSTEM_GUIDE.md  TOOL_INTEGRATION.md  UNIVERSAL_WINDOWS_IMPLEMENTATION.md  UNIVERSAL_WRITING_TOOLS_GUIDE.md  architecture_new_patterns.md  font_integration_guide.md  main_window_graphic_representation.md  main_window_layout_diagram.md  microsoft_font_licensing.md  migration_guide.md  serif_fonts_guide.md  troubleshooting_guide.md
examples/: README.md  ai_config_example.toml  config_example.toml  theme_integration_examples
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
src/: cache.rs  classify.rs  commands.rs  compliance.rs  config_security.rs  convert.rs  database_app_state.rs  error.rs  file_access.rs  file_ops.rs  font_loader.rs  font_manager.rs  ipc_bridge.rs  lib.rs  main.rs  main_window_comprehensive.rs  memory.rs  rate_limiter.rs  services.rs  settings.rs  ui_state.rs  working_app.rs
src/api/: mod.rs
src/automation/: mod.rs
src/database/: analysis_service.rs  backup_service  backup_service.rs  enhanced_database_sqlx.rs  mod.rs  project_management.rs  research_service.rs  search_service.rs  service_factory.rs  vector_embedding.rs
src/export/: mod.rs
src/fonts/: downloadable_fonts.rs  embedded_fonts.rs  mod.rs
src/i18n/: mod.rs
src/import/: heuristic_import.rs  mod.rs
src/performance/: mod.rs
src/persistence/: backup.rs  data_validator.rs  export.rs  import.rs  index_manager.rs  migration.rs  mod.rs  project_structure.rs
src/search/: index_builder.rs  mod.rs  query_processor.rs
src/security/: mod.rs  (+1 more)
tests/: hierarchy_tool_test.rs
(+144 files in other folders)
