[package]
name = "herding-cats-rust"
version = "0.50.0"
description = "Enterprise Writing Suite - Advanced Rust Application with AI Integration"
authors = ["Robyn <robyn@herdingcats.dev>"]
edition = "2021"
keywords = ["writing", "productivity", "ai", "database", "slint", "rust"]
categories = ["productivity", "database", "gui"]
license = "MIT"
repository = "https://github.com/RKTakami/herding-cats-rust"
documentation = "https://herdingcats.dev/docs"
homepage = "https://herdingcats.dev"
readme = "README.md"

[lib]
name = "herding_cats_rust"
path = "src/lib.rs"

[[bin]]
name = "herding-cats-rust"
path = "src/main.rs"

[features]
default = []

[dependencies]
# Windowing library
tao = "0.34"

# Async runtime
tokio = { version = "1.36.0", features = ["full"] }
keyring = "2.3"

# Database dependencies - replacing rusqlite with sqlx for async support
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid", "json"] }

# HTTP client for AI services
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }

# Utility dependencies
num-traits = "0.2"
url = "2.5"

# Testing utilities
tempfile = "3.0"
ndarray = "0.15"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security and cryptography
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"

# Font handling
fontdb = "0.16"
ttf-parser = "0.20"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
unicode-segmentation = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
log = "0.4"
env_logger = "0.10"
tracing = "0.1"

# Window persistence dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"

# Additional utilities
dirs = "5.0"
lazy_static = "1.4"
async-trait = "0.1"
rfd = "0.14"

# Vector embedding serialization
bincode = "1.3"

# Performance monitoring
sysinfo = "0.28"

# Configuration management
config = "0.13"

# Rate limiting
ratelimit = "0.10"

# File watching for development (optional)
notify = { version = "6.0", optional = true }

# WebView for WYSIWYG Editor
wry = "0.53"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"

[build-dependencies]
# Build system dependencies for native library integration
cc = "1.0"

# Build script to integrate vcpkg libraries
[package.metadata.docs.rs]
all-features = true

[profile.release]
# Optimize for performance
lto = true
opt-level = 3
codegen-units = 1

[profile.dev]
# Debug optimizations
opt-level = 0
debug = true
